--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,43 @@
+networks:
+  spartan-network:
+    driver: bridge
+
+volumes:
+  spartan-data:
+
 services:
   spartan-db-container:
+    image: postgres
+    container_name: spartan-db-container
     env_file:
       - .env_db
+    #    environment:
+    #      POSTGRES_DB=spartan-app-db
+    #      POSTGRES_USER=Cydeo123*!@
+    #      POSTGRES_PASSWORD=Cydeo123*!@
+    networks:
+      - spartan-network
+    volumes:
+      - spartan-data:/var/lib/postgresql/data
     ports:
       - '5436:5432'
     restart: always
   spartan-app-container:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    image: spartan-app:latest
+    container_name: spartan-app-container
     env_file:
       - .env_app
+    #    environment:
+    #      SPARTAN_NON_SECURE_DB_URL=jdbc:postgresql://spartan-db-container:5432/spartan-app-db
+    #      SPARTAN_NON_SECURE_DB_USERNAME="Cydeo123*!@"
+    #      SPARTAN_NON_SECURE_DB_PASSWORD="Cydeo123*!@"
+    networks:
+      - spartan-network
     ports:
       - '8000:8000'
+    depends_on:
+      spartan-db-container:
+        condition: service_started
